格式化代码

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
     "semi": false,
     "arrowParens": "always",
     "singleQuote": true,
-    "trailingCommas":"none"
+    "trailingCommas":"none",
+    "printWidth":200
   }
   
